Fix background image stretching issue

--- a/style.css
+++ b/style.css
@@ -43,33 +43,34 @@ body {
 }
 
 /* ===== BACKGROUND IMAGES ===== */
+/* ===== BACKGROUND ===== */
 .background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  height: 300px;
-  background-repeat: no-repeat;
+  width: 100%;
+  height: 200px; /* Smaller height like in the design */
+  background-image: url('./images/bg-mobile-light.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
   z-index: -1;
+  transition: background-image 0.3s ease;
 }
 
-.background-light {
-  background-image: url('./images/bg-desktop-light.jpg');
-  opacity: 1;
+body.dark-theme .background {
+  background-image: url('./images/bg-mobile-dark.jpg');
 }
 
-.background-dark {
-  background-image: url('./images/bg-desktop-dark.jpg');
-  opacity: 0;
-}
-
-.dark-theme .background-light {
-  opacity: 0;
-}
-
-.dark-theme .background-dark {
-  opacity: 1;
+/* Desktop: Use mobile background too (design shows same background) */
+@media (min-width: 768px) {
+  .background {
+    background-image: url('./images/bg-mobile-light.jpg');
+    height: 300px;
+  }
+  
+  body.dark-theme .background {
+    background-image: url('./images/bg-mobile-dark.jpg');
+  }
 }
 
 /* ===== CONTAINER ===== */
